# aws-lambda-telescope-msk

./: .coverage  .cruft.json  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  Kafka.md  Makefile  README.md  buildspec.yml  buildspec_pr.yml  handler.py  lambda-function.py  main.py  mise.toml  pyproject.toml  requirements.txt
resources/aws-sam-cli/: template.yaml
src/: handler.py  producer.py
src/telescope_msk/: app_info.py  broker.py  cli.py  consumer.py  ec2.py  graphyte.py  logger.py  msk.py  publisher.py  send_graphyte_message.py
telemetry/telescope_msk/: __init__.py  adminapi.py  basic_json_model.json  broker.py  consumer.py  copies.py  ec2.py  fumbling.py  logger.py  metrics possible  msk.py  publisher.py  send_graphyte_message.py
tests/: test_adminapi.py  test_broker.py  test_consumer.py  test_publisher.py  test_telescope_msk.py
tests/unit/: test_broker.py  test_consumer.py  test_graphyte.py  test_publisher.py
