[tool.poetry]
name = "telescope-msk"
version = "0.1.0"
description = "Telescope library for interacting with an MSK/Kafka cluster"
readme = "README.md"
authors = ["Vítor Brandão <109226+vitorbrandao@users.noreply.github.com>"]
maintainers = ["Team Telemetry"]

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
aws-lambda-powertools = "^1.21.1"
boto3 = "^1.17.85"
confluent-kafka = "^1.7.0"
graphyte = "^1.6.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
aws-lambda-context = "^1.1.0"
aws-sam-cli = "^1.6.2"
bandit = "^1.7.0"
black = "^21.5b2"
colorama = "^0.4.4"
fire = "^0.3.1"
moto = "^2.0.8"
pre-commit = "^2.14.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
rich = "^9.6.1"
safety = "^1.10.3"
taskipy = "^1.4.0"
version-incrementor = "^1.5.0"

[tool.taskipy.tasks]
assemble = "./bin/lambda-tools.sh assemble"
bandit = "bandit -r ./src"
black_check = "black --check --diff ./src ./tests"
black_reformat = "black ./src ./tests"
clean = "rm -fr ./build"
cut_release = "./bin/lambda-tools.sh cut_release"
post_functest = "task stop_lambda"
pre_functest = "task assemble && task start_lambda"
prepare_release = "./bin/lambda-tools.sh prepare_release"
publish = "./bin/lambda-tools.sh publish"
publish_checksum_file = "./bin/lambda-tools.sh publish_checksum_file"
publish_s3 = "./bin/lambda-tools.sh publish_artifacts_to_s3"
rename_s3_file = "./bin/lambda-tools.sh rename_artifacts_in_s3"
safety = "safety check"
start_lambda = "./bin/start-lambda.sh"
stop_lambda = "./bin/stop-lambda.sh"
test = "task unittest"
unittest = "PYTHONPATH='src' pytest tests/unit --cov=src"
verify = "task test && task black_check && task safety && task bandit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
