[tool.poetry]
name = "aws-lambda-telescope-msk"
version = "0.1.0"
description = "Telescope library for interacting with an MSK/Kafka cluster"
readme = "README.md"
authors = ["Team Telemetry <telemetry@digital.hmrc.gov.uk>"]
maintainers = ["Team Telemetry"]
license = "Apache 2.0"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "^3.14.2"
aws-lambda-powertools = "^2.33.1"
boto3 = "^1.34.38"
confluent-kafka = "^2.14.0"
cryptography = "^46.0.4"
pre-commit = "^4.5.1"
# workaround for: https://github.com/python-poetry/poetry-plugin-export/issues/183
urllib3 = ">=1.25.4,<1.27"

[tool.poetry.group.dev.dependencies]
aws-lambda-context = "^1.1.0"
bandit = "^1.9.3"
black = "^26.1.0"
colorama = "^0.4.5"
cookiecutter = "^2.1.1"
flake8 = "^7.0.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
version-incrementor = "^1.10.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
